# seegull

./: LICENSE  README.md  setup.cfg
src/seegull/: __init__.py  widgets.py
