[metadata]
name = seegull
version = 0.0.1
author = Bu Yixin
author_email = yixinbc@foxmail.com
description = based on tkinter,seegull is a python library that let you warp command line program into a GUI application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yixinBC/seegull
project_urls =
    Bug Tracker = https://github.com/yixinBC/seegull/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src